LAB_3_Drone/parser/y.output

state 0
	$accept: .program $end 
	statement_list: .    (2)

	.  reduce 2 (src line 89)

	program  goto 1
	statement_list  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  statement_list.    (1)
	statement_list:  statement_list.statement 

	TOKEN_SEISU  shift 18
	TOKEN_RONRI  shift 19
	TOKEN_RIPPOTAI  shift 11
	TOKEN_HAIRETSU  shift 12
	TOKEN_KANSU  shift 16
	TOKEN_SHUKI  shift 38
	TOKEN_SORENARA  shift 37
	TOKEN_KIDO  shift 14
	TOKEN_SHUSHI  shift 15
	TOKEN_MODORU  shift 13
	TOKEN_RUIKEI  shift 46
	TOKEN_JIGEN  shift 47
	TOKEN_SHINRI  shift 42
	TOKEN_USO  shift 43
	TOKEN_IDENTIFIER  shift 44
	TOKEN_INTEGER  shift 40
	TOKEN_HEX  shift 41
	TOKEN_MINUS  shift 22
	TOKEN_NOT  shift 23
	TOKEN_LPAREN  shift 26
	TOKEN_LBRACE  shift 39
	TOKEN_LBRACKET  shift 45
	TOKEN_MOVE_UP  shift 48
	TOKEN_MOVE_DOWN  shift 49
	TOKEN_MOVE_LEFT  shift 50
	TOKEN_MOVE_RIGHT  shift 51
	TOKEN_MOVE_FORWARD  shift 52
	TOKEN_MOVE_BACKWARD  shift 53
	TOKEN_MEASURE_UP  shift 54
	TOKEN_MEASURE_DOWN  shift 55
	TOKEN_MEASURE_LEFT  shift 56
	TOKEN_MEASURE_RIGHT  shift 57
	TOKEN_MEASURE_FORWARD  shift 58
	TOKEN_MEASURE_BACKWARD  shift 59
	TOKEN_GET_POSITION  shift 60
	TOKEN_BREAK_SEQUENCE  shift 61
	.  reduce 1 (src line 83)

	statement  goto 3
	expression  goto 17
	assignment_expression  goto 21
	simple_expression  goto 20
	literal  goto 28
	robot_operation  goto 35
	if_expression  goto 24
	loop_expression  goto 25
	array_literal  goto 30
	cell_literal  goto 31
	function_literal  goto 32
	ruikei_expression  goto 33
	jigen_expression  goto 34
	variable_declaration  goto 4
	return_statement  goto 5
	break_statement  goto 6
	continue_statement  goto 7
	function_declaration  goto 8
	expression_statement  goto 9
	identifier  goto 29
	variable_type  goto 10
	array_dims_literal  goto 36
	sequence_expression  goto 27

state 3
	statement_list:  statement_list statement.    (3)

	.  reduce 3 (src line 93)


state 4
	statement:  variable_declaration.    (4)

	.  reduce 4 (src line 98)


state 5
	statement:  return_statement.    (5)

	.  reduce 5 (src line 100)


state 6
	statement:  break_statement.    (6)

	.  reduce 6 (src line 101)


state 7
	statement:  continue_statement.    (7)

	.  reduce 7 (src line 102)


state 8
	statement:  function_declaration.    (8)

	.  reduce 8 (src line 103)


state 9
	statement:  expression_statement.    (9)

	.  reduce 9 (src line 104)


state 10
	variable_declaration:  variable_type.TOKEN_IDENTIFIER TOKEN_ASSIGN expression optional_semicolon 

	TOKEN_IDENTIFIER  shift 62
	.  error


state 11
	variable_declaration:  TOKEN_RIPPOTAI.TOKEN_IDENTIFIER TOKEN_ASSIGN expression optional_semicolon 
	variable_declaration:  TOKEN_RIPPOTAI.TOKEN_IDENTIFIER TOKEN_ASSIGN cell_literal_body optional_semicolon 
	cell_literal:  TOKEN_RIPPOTAI.cell_literal_body 

	TOKEN_IDENTIFIER  shift 63
	TOKEN_LBRACE  shift 65
	.  error

	cell_literal_body  goto 64

12: shift/reduce conflict (shift 66(0), red'n 19(0)) on TOKEN_IDENTIFIER
state 12
	variable_declaration:  TOKEN_HAIRETSU.TOKEN_IDENTIFIER TOKEN_ASSIGN expression optional_semicolon 
	variable_type:  TOKEN_HAIRETSU.    (19)

	TOKEN_IDENTIFIER  shift 66
	.  error


state 13
	return_statement:  TOKEN_MODORU.expression optional_semicolon 

	TOKEN_RIPPOTAI  shift 68
	TOKEN_KANSU  shift 69
	TOKEN_SHUKI  shift 38
	TOKEN_SORENARA  shift 37
	TOKEN_RUIKEI  shift 46
	TOKEN_JIGEN  shift 47
	TOKEN_SHINRI  shift 42
	TOKEN_USO  shift 43
	TOKEN_IDENTIFIER  shift 44
	TOKEN_INTEGER  shift 40
	TOKEN_HEX  shift 41
	TOKEN_MINUS  shift 22
	TOKEN_NOT  shift 23
	TOKEN_LPAREN  shift 26
	TOKEN_LBRACE  shift 39
	TOKEN_LBRACKET  shift 45
	TOKEN_MOVE_UP  shift 48
	TOKEN_MOVE_DOWN  shift 49
	TOKEN_MOVE_LEFT  shift 50
	TOKEN_MOVE_RIGHT  shift 51
	TOKEN_MOVE_FORWARD  shift 52
	TOKEN_MOVE_BACKWARD  shift 53
	TOKEN_MEASURE_UP  shift 54
	TOKEN_MEASURE_DOWN  shift 55
	TOKEN_MEASURE_LEFT  shift 56
	TOKEN_MEASURE_RIGHT  shift 57
	TOKEN_MEASURE_FORWARD  shift 58
	TOKEN_MEASURE_BACKWARD  shift 59
	TOKEN_GET_POSITION  shift 60
	TOKEN_BREAK_SEQUENCE  shift 61
	.  error

	expression  goto 67
	assignment_expression  goto 21
	simple_expression  goto 20
	literal  goto 28
	robot_operation  goto 35
	if_expression  goto 24
	loop_expression  goto 25
	array_literal  goto 30
	cell_literal  goto 31
	function_literal  goto 32
	ruikei_expression  goto 33
	jigen_expression  goto 34
	identifier  goto 29
	array_dims_literal  goto 36
	sequence_expression  goto 27

state 14
	break_statement:  TOKEN_KIDO.optional_semicolon 
	optional_semicolon: .    (11)

	TOKEN_SEMICOLON  shift 71
	.  reduce 11 (src line 113)

	optional_semicolon  goto 70

state 15
	continue_statement:  TOKEN_SHUSHI.optional_semicolon 
	optional_semicolon: .    (11)

	TOKEN_SEMICOLON  shift 71
	.  reduce 11 (src line 113)

	optional_semicolon  goto 72

state 16
	function_declaration:  TOKEN_KANSU.TOKEN_IDENTIFIER TOKEN_LPAREN parameter_list TOKEN_RPAREN block_statement 
	function_literal:  TOKEN_KANSU.TOKEN_LPAREN parameter_list TOKEN_RPAREN block_statement 

	TOKEN_IDENTIFIER  shift 73
	TOKEN_LPAREN  shift 74
	.  error


17: shift/reduce conflict (shift 77(5), red'n 11(0)) on TOKEN_MINUS
17: shift/reduce conflict (shift 87(8), red'n 11(0)) on TOKEN_LPAREN
17: shift/reduce conflict (shift 88(8), red'n 11(0)) on TOKEN_LBRACKET
state 17
	expression_statement:  expression.optional_semicolon 
	expression:  expression.TOKEN_PLUS expression 
	expression:  expression.TOKEN_MINUS expression 
	expression:  expression.TOKEN_ASTERISK expression 
	expression:  expression.TOKEN_SLASH expression 
	expression:  expression.TOKEN_PERCENT expression 
	expression:  expression.TOKEN_EQUALS expression 
	expression:  expression.TOKEN_NOTEQUALS expression 
	expression:  expression.TOKEN_LESS expression 
	expression:  expression.TOKEN_GREATER expression 
	expression:  expression.TOKEN_AND expression 
	expression:  expression.TOKEN_OR expression 
	expression:  expression.TOKEN_LPAREN expression_list TOKEN_RPAREN 
	expression:  expression.TOKEN_LBRACKET non_empty_expression_list TOKEN_RBRACKET 
	expression:  expression.TOKEN_LBRACKET non_empty_expression_list TOKEN_RBRACKET TOKEN_ASSIGN expression 
	expression:  expression.TOKEN_ARROW identifier 
	optional_semicolon: .    (11)

	TOKEN_PLUS  shift 76
	TOKEN_MINUS  shift 77
	TOKEN_ASTERISK  shift 78
	TOKEN_SLASH  shift 79
	TOKEN_LESS  shift 83
	TOKEN_GREATER  shift 84
	TOKEN_EQUALS  shift 81
	TOKEN_NOTEQUALS  shift 82
	TOKEN_AND  shift 85
	TOKEN_OR  shift 86
	TOKEN_ARROW  shift 89
	TOKEN_PERCENT  shift 80
	TOKEN_SEMICOLON  shift 71
	TOKEN_LPAREN  shift 87
	TOKEN_LBRACKET  shift 88
	.  reduce 11 (src line 113)

	optional_semicolon  goto 75

state 18
	variable_type:  TOKEN_SEISU.    (17)

	.  reduce 17 (src line 137)


state 19
	variable_type:  TOKEN_RONRI.    (18)

	.  reduce 18 (src line 139)


state 20
	expression:  simple_expression.    (26)

	.  reduce 26 (src line 178)


state 21
	expression:  assignment_expression.    (27)

	.  reduce 27 (src line 180)


state 22
	expression:  TOKEN_MINUS.expression 

	TOKEN_RIPPOTAI  shift 68
	TOKEN_KANSU  shift 69
	TOKEN_SHUKI  shift 38
	TOKEN_SORENARA  shift 37
	TOKEN_RUIKEI  shift 46
	TOKEN_JIGEN  shift 47
	TOKEN_SHINRI  shift 42
	TOKEN_USO  shift 43
	TOKEN_IDENTIFIER  shift 44
	TOKEN_INTEGER  shift 40
	TOKEN_HEX  shift 41
	TOKEN_MINUS  shift 22
	TOKEN_NOT  shift 23
	TOKEN_LPAREN  shift 26
	TOKEN_LBRACE  shift 39
	TOKEN_LBRACKET  shift 45
	TOKEN_MOVE_UP  shift 48
	TOKEN_MOVE_DOWN  shift 49
	TOKEN_MOVE_LEFT  shift 50
	TOKEN_MOVE_RIGHT  shift 51
	TOKEN_MOVE_FORWARD  shift 52
	TOKEN_MOVE_BACKWARD  shift 53
	TOKEN_MEASURE_UP  shift 54
	TOKEN_MEASURE_DOWN  shift 55
	TOKEN_MEASURE_LEFT  shift 56
	TOKEN_MEASURE_RIGHT  shift 57
	TOKEN_MEASURE_FORWARD  shift 58
	TOKEN_MEASURE_BACKWARD  shift 59
	TOKEN_GET_POSITION  shift 60
	TOKEN_BREAK_SEQUENCE  shift 61
	.  error

	expression  goto 90
	assignment_expression  goto 21
	simple_expression  goto 20
	literal  goto 28
	robot_operation  goto 35
	if_expression  goto 24
	loop_expression  goto 25
	array_literal  goto 30
	cell_literal  goto 31
	function_literal  goto 32
	ruikei_expression  goto 33
	jigen_expression  goto 34
	identifier  goto 29
	array_dims_literal  goto 36
	sequence_expression  goto 27

state 23
	expression:  TOKEN_NOT.expression 

	TOKEN_RIPPOTAI  shift 68
	TOKEN_KANSU  shift 69
	TOKEN_SHUKI  shift 38
	TOKEN_SORENARA  shift 37
	TOKEN_RUIKEI  shift 46
	TOKEN_JIGEN  shift 47
	TOKEN_SHINRI  shift 42
	TOKEN_USO  shift 43
	TOKEN_IDENTIFIER  shift 44
	TOKEN_INTEGER  shift 40
	TOKEN_HEX  shift 41
	TOKEN_MINUS  shift 22
	TOKEN_NOT  shift 23
	TOKEN_LPAREN  shift 26
	TOKEN_LBRACE  shift 39
	TOKEN_LBRACKET  shift 45
	TOKEN_MOVE_UP  shift 48
	TOKEN_MOVE_DOWN  shift 49
	TOKEN_MOVE_LEFT  shift 50
	TOKEN_MOVE_RIGHT  shift 51
	TOKEN_MOVE_FORWARD  shift 52
	TOKEN_MOVE_BACKWARD  shift 53
	TOKEN_MEASURE_UP  shift 54
	TOKEN_MEASURE_DOWN  shift 55
	TOKEN_MEASURE_LEFT  shift 56
	TOKEN_MEASURE_RIGHT  shift 57
	TOKEN_MEASURE_FORWARD  shift 58
	TOKEN_MEASURE_BACKWARD  shift 59
	TOKEN_GET_POSITION  shift 60
	TOKEN_BREAK_SEQUENCE  shift 61
	.  error

	expression  goto 91
	assignment_expression  goto 21
	simple_expression  goto 20
	literal  goto 28
	robot_operation  goto 35
	if_expression  goto 24
	loop_expression  goto 25
	array_literal  goto 30
	cell_literal  goto 31
	function_literal  goto 32
	ruikei_expression  goto 33
	jigen_expression  goto 34
	identifier  goto 29
	array_dims_literal  goto 36
	sequence_expression  goto 27

state 24
	expression:  if_expression.    (41)

	.  reduce 41 (src line 194)


state 25
	expression:  loop_expression.    (42)

	.  reduce 42 (src line 195)


state 26
	expression:  TOKEN_LPAREN.expression TOKEN_RPAREN 

	TOKEN_RIPPOTAI  shift 68
	TOKEN_KANSU  shift 69
	TOKEN_SHUKI  shift 38
	TOKEN_SORENARA  shift 37
	TOKEN_RUIKEI  shift 46
	TOKEN_JIGEN  shift 47
	TOKEN_SHINRI  shift 42
	TOKEN_USO  shift 43
	TOKEN_IDENTIFIER  shift 44
	TOKEN_INTEGER  shift 40
	TOKEN_HEX  shift 41
	TOKEN_MINUS  shift 22
	TOKEN_NOT  shift 23
	TOKEN_LPAREN  shift 26
	TOKEN_LBRACE  shift 39
	TOKEN_LBRACKET  shift 45
	TOKEN_MOVE_UP  shift 48
	TOKEN_MOVE_DOWN  shift 49
	TOKEN_MOVE_LEFT  shift 50
	TOKEN_MOVE_RIGHT  shift 51
	TOKEN_MOVE_FORWARD  shift 52
	TOKEN_MOVE_BACKWARD  shift 53
	TOKEN_MEASURE_UP  shift 54
	TOKEN_MEASURE_DOWN  shift 55
	TOKEN_MEASURE_LEFT  shift 56
	TOKEN_MEASURE_RIGHT  shift 57
	TOKEN_MEASURE_FORWARD  shift 58
	TOKEN_MEASURE_BACKWARD  shift 59
	TOKEN_GET_POSITION  shift 60
	TOKEN_BREAK_SEQUENCE  shift 61
	.  error

	expression  goto 92
	assignment_expression  goto 21
	simple_expression  goto 20
	literal  goto 28
	robot_operation  goto 35
	if_expression  goto 24
	loop_expression  goto 25
	array_literal  goto 30
	cell_literal  goto 31
	function_literal  goto 32
	ruikei_expression  goto 33
	jigen_expression  goto 34
	identifier  goto 29
	array_dims_literal  goto 36
	sequence_expression  goto 27

state 27
	expression:  sequence_expression.    (48)

	.  reduce 48 (src line 215)


state 28
	simple_expression:  literal.    (50)

	.  reduce 50 (src line 225)


state 29
	assignment_expression:  identifier.TOKEN_ASSIGN expression 
	simple_expression:  identifier.    (51)

	TOKEN_ASSIGN  shift 93
	.  reduce 51 (src line 227)


state 30
	simple_expression:  array_literal.    (52)

	.  reduce 52 (src line 228)


state 31
	simple_expression:  cell_literal.    (53)

	.  reduce 53 (src line 229)


state 32
	simple_expression:  function_literal.    (54)

	.  reduce 54 (src line 230)


state 33
	simple_expression:  ruikei_expression.    (55)

	.  reduce 55 (src line 231)


state 34
	simple_expression:  jigen_expression.    (56)

	.  reduce 56 (src line 232)


state 35
	simple_expression:  robot_operation.    (57)

	.  reduce 57 (src line 233)


state 36
	simple_expression:  array_dims_literal.    (58)

	.  reduce 58 (src line 234)


state 37
	if_expression:  TOKEN_SORENARA.TOKEN_LPAREN expression TOKEN_RPAREN block_statement if_tail 

	TOKEN_LPAREN  shift 94
	.  error


state 38
	loop_expression:  TOKEN_SHUKI.TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_COLON expression block_statement 

	TOKEN_IDENTIFIER  shift 95
	.  error


state 39
	sequence_expression:  TOKEN_LBRACE.optional_operation_list TOKEN_RBRACE 
	array_dims_literal:  TOKEN_LBRACE.non_empty_expression_list TOKEN_RBRACE 
	optional_operation_list: .    (99)
